# predict-house-price

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: treino_com_outliers.csv  treino_sem_outliers.csv
notebooks/: eda.ipynb  gradient_boosting.pkl  process_data.ipynb  train_model.ipynb  y_test.ipynb
