[tool.poetry]
name = "predict-price"
version = "0.1.0"
description = ""
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
jupyterlab = "^4.1.0"
scikit-learn = "^1.4.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
geodatasets = "^2023.12.0"
import-ipynb = "^0.1.4"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
